--- a/wiki/J1772Basics.wiki
+++ b/wiki/J1772Basics.wiki
@@ -16,8 +16,9 @@ The J1772 Pilot is a 1khz +12V to -12V square wave, the voltage defines the stat
 || State A || 12 || N/A || Not Connected || 
 || State B || 9 || 2.74k || Connected || 
 || State C || 6 || 882 || Charging || 
-||State D || 3 || 246 || Ventilation Required || 
-
+|| State D || 3 || 246 || Ventilation Required || 
+|| State E || 0 || N/A || No power ||
+|| State F || -12 || N/A || EVSE Error ||
 
 
 *Pilot - State - 24A*
