--- a/wiki/J1772CableSources.wiki
+++ b/wiki/J1772CableSources.wiki
@@ -1,5 +1,5 @@
+#summary Cables avalible in low quantity
 #labels Featured
-#Summary Cables publicly avalible in low quantity
 
 #J1772 Cable Sources
 
