--- a/wiki/LoadingFirmware.wiki
+++ b/wiki/LoadingFirmware.wiki
@@ -5,4 +5,5 @@
 Loading firmware to the Open-EVSE requires an ISP. There are many AVR compatable programers avalible. The USBtinyISP from Adafruit is a good choice, it is inexpensive and open. http://www.ladyada.net/make/usbtinyisp/
 <img src="http://farm2.static.flickr.com/1388/531946274_b6aec192ba.jpg">
 
-= Details =
+= Software =
+You will also need software compatible with your ISP such as AVRDUDE or the ARDUINO IDE. To set up the ARDUINO IDE for use with an ISP check out lincomatic's blog.
