--- a/wiki/OpenEVSEv1partslist.wiki
+++ b/wiki/OpenEVSEv1partslist.wiki
@@ -2,7 +2,7 @@
 
 = Open EVSE v1 part list =
 
-||  || Part Number || Type || Value ||  || Qty  || Price || URL ||
+|| *Basic EVSE* || Part Number || Type || Value ||  || Qty  || Price || URL ||
 || Atmel || ATMEGA328P-PU || Microprocessor || 328p-pu ||  || 1 || 4.98 || http://search.digikey.com/us/en/products/ATMEGA328P-PU/ATMEGA328P-PU-ND/1914589 ||
 || Fairchild Semi || LF353N || Opamp || LF353 ||  || 1 || 0.60 || http://search.digikey.com/us/en/products/LF353N/LF353NFS-ND/458668 ||
 || STMicroelectronics || 2N2222A || NPN Transistor || 2n2222 ||  || 1 || 0.96 || http://search.digikey.com/us/en/products/2N2222A/497-2598-ND/603623 ||
@@ -19,4 +19,19 @@
 || Any || Any || Resistor || 56k ||  || 1 || 0.09 || 
 || Any || Any || Resistor || 100k ||  || 1 || 0.09 || 
 || Any || Any || Resistor || 200k ||  || 1 || 0.09 || 
-||  ||  ||  ||  ||  || Total || 12.02 || 
+||  ||  ||  ||  ||  || Total || 12.02 ||
+|| *GFCI Parts* ||  ||  ||  ||  || || || 
+ 
+|| Crmagnetics || CR8420-1000-G || CT || 1000 ||  || 1 || 10.65 || http://search.digikey.com/us/en/products/CR8420-1000-G/582-1018-ND/1045174 || 
+|| Fairchild Semi || LN358N || Opamp || LN358 ||  || 1 || 0.66 || http://search.digikey.com/us/en/products/LM358N/LM358NFS-ND/458692 || 
+|| Fairchild Semi || 1N4148TA || Diode || 1N4148 ||  || 2 || 0.28 || http://search.digikey.com/us/en/products/1N4148TA/1N4148TACT-ND/1532747 || 
+|| Fairchild Semi || 1N4733A || Diode || 1N4733A ||  || 2 || 0.84 ||  || 
+|| Any || Any || Resistor || 150 ||  || 1 || 0.09 ||  || 
+|| Any || Any || Resistor || 330 ||  || 1 || 0.09 ||  || 
+|| Any || Any || Resistor || 1k ||  || 1 || 0.09 ||  || 
+|| Any || Any || Resistor || 10k ||  || 1 || 0.09 ||  || 
+|| Any || Any || Resistor || 20k ||  || 1 || 0.09 ||  || 
+|| Any || Any || Resistor || 100k ||  || 2 || 0.18 ||  || 
+|| Any || Any || Cap (ceramic) || .1uf ||  || 2 || 0.6 || http://search.digikey.com/scripts/dksearch/dksus.dll?vendor=0&keywords=+399-4266-ND || 
+|| Panasonic || EEA-FC1E100 || Cap (electrolitic) || 10uf ||  || 1 || 0.3 || http://search.digikey.com/us/en/products/EEA-FC1E100/P11212-ND/356116 || 
+|| ||  ||  ||  || ||GFCI Total|| 13.96 ||  || 
