--- a/wiki/OpenEVSEv1partslist.wiki
+++ b/wiki/OpenEVSEv1partslist.wiki
@@ -9,19 +9,18 @@
 || Fairchild Semi || KA7805ETU || Vreg || 5V ||  || 1 || 0.65 || http://search.digikey.com/us/en/products/KA7805ETU/KA7805ETU-ND/965381 ||
 || ECS || ECS-160-20-46X || Crystal || 16000 ||  || 1 || 0.46 || http://search.digikey.com/us/en/products/ECS-160-20-46X/XC1759-ND/2676589 ||
 || Fairchild Semi || 1N4148TA || Diode || 1N4148 ||  || 1 || 0.14 || http://search.digikey.com/us/en/products/1N4148TA/1N4148TACT-ND/1532747 ||
-|| LittleFuse || P6KE16A || TVS Diode || P6KE16A ||  || 1 || 0.60 || http://search.digikey.com/us/en/products/P6KE16A/P6KE16ALFCT-ND/407665 ||
+|| LittleFuse || P6KE16CA || TVS Diode || P6KE16CA ||  || 1 || 0.55 || http://search.digikey.com/us/en/products/P6KE16CA/P6KE16CALFCT-ND/407666 ||
 || Sparkfun || COM-00105 || LED  || RGB CC ||  || 1 || 1.95 || http://www.sparkfun.com/products/105 ||
 || Panasonic || EEA-FC1E100 || Cap (electrolitic) || 10uf ||  || 1 || 0.30 || http://search.digikey.com/us/en/products/EEA-FC1E100/P11212-ND/356116 ||
 || Any || Any || Cap (ceramic) || .1uf ||  || 2 || 0.30 || http://search.digikey.com/scripts/dksearch/dksus.dll?vendor=0&keywords=+399-4266-ND ||
 || Any || Any || Cap (ceramic) || 22pf ||  || 2 || 0.30 || http://search.digikey.com/us/en/products/SR152A220KAR/478-3162-ND/936804 ||
 || Any || Any || Resistor || 150 ||  || 2 || 0.09 ||
-|| Any || Any || Resistor || 180 ||  || 1 || 0.09 || 
 || Any || Any || Resistor || 330 ||  || 2 || 0.09 || 
 || Any || Any || Resistor || 1K 1% ||  || 1 || 0.15 || 
 || Any || Any || Resistor || 56k ||  || 1 || 0.09 || 
 || Any || Any || Resistor || 100k ||  || 1 || 0.09 || 
 || Any || Any || Resistor || 200k ||  || 1 || 0.09 || 
-||  ||  ||  ||  ||  || Total || 12.62 ||
+||  ||  ||  ||  ||  || Total || 12.57 ||
 || *GFCI Parts* ||  ||  ||  ||  || || || 
  
 || Crmagnetics || CR8420-1000-G || CT || 1000 ||  || 1 || 10.65 || http://search.digikey.com/us/en/products/CR8420-1000-G/582-1018-ND/1045174 || 
