Edited wiki page ExampleEVSE through web user interface.

--- a/wiki/ExampleEVSE.wiki
+++ b/wiki/ExampleEVSE.wiki
@@ -2,9 +2,13 @@
 
 = Introduction =
 
-This is an example of an EVSE buit with the Open EVSE board.
+This is an example of a 30A EVSE build with the Open EVSE GFCI board. For Open EVSE without GFCI, the Current transformer is not required. 
 
 This should not be attempted with the required skills and knowledge to work with high voltage.
+
+Open EVSE is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
 
 = High Voltage Schematic =
@@ -15,8 +19,13 @@ This should not be attempted with the required skills and knowledge to work with
 
 || Part || Source || Cost || Quantity || Link ||
 || Open EVSE Board || Open EVSE || $60 / $80 || 1 || http://code.google.com/p/open-evse/ ||
-|| Relay/Contactor || Digikey || $13.00 || 1 || http://search.digikey.com/us/en/products/T92P7D22-12/PB486-ND/365921 ||
-|| Current Transformer || Digikey || $10.65 || http://search.digikey.com/scripts/DkSearch/dksus.dll?WT.z_header=search_go&lang=en&site=us&keywords=8420-1000-g ||
+|| 30A Relay || Digikey || $13.00 || 1 || http://search.digikey.com/us/en/products/T92P7D22-12/PB486-ND/365921 ||
+|| Current Transformer || Digikey || $10.65 || 1 || http://search.digikey.com/us/en/products/CR8420-1000-G/582-1018-ND/1045174 ||
+|| 12V DC Power Supply || Digikey || $28.00 || 1 || http://search.digikey.com/us/en/products/FSC-S5-12U/102-1573-ND/1699037 ||
+|| 30A J1772 cord || see Wiki || $170 - $330 || 1 || http://code.google.com/p/open-evse/wiki/J1772CableSources ||
+|| 30A AC Plug L6-30 || StayOnline || $29.00 || 1 || http://www.stayonline.com/detail.aspx?ID=15695 ||
+|| Water proof Enclosure || Home Depot || $6.88 || 1 || http://www.homedepot.com/Cantex/h_d1/N-5yc1vZ591/R-202043434/h_d2/ProductDisplay?langId=-1&storeId=10051&catalogId=10053 ||
+|| Water proof Cable Glands || Poly Case || $3.25 || 2 || http://www.polycase.com/cg-16 ||
 
 <a href="http://www.flickr.com/photos/60192309@N05/6140390535/" title="2011-09-09_14-32-39_457 by chris1howell, on Flickr"><img src="http://farm7.static.flickr.com/6178/6140390535_062077ff12.jpg" width="500" height="281"</a>
 
