--- a/wiki/EVSE_Example75A.wiki
+++ b/wiki/EVSE_Example75A.wiki
@@ -13,18 +13,15 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
 = High Voltage Schematic =
 
-<a href="http://www.flickr.com/photos/60192309@N05/6539483165/" title="Untitled by chris1howell, on Flickr"><img src="http://farm8.staticflickr.com/7171/6539483165_6af4f30b8f_z.jpg" width="640" height="281"</a>
+<a href="http://www.flickr.com/photos/60192309@N05/6550446647/" title="Untitled by chris1howell, on Flickr"><img src="http://farm8.staticflickr.com/7165/6550446647_14a4dd680b_z.jpg" width="640" height="289"</a>
 
 = Parts =
 
 || Part || Source || Cost || Quantity || Link ||
 || Open EVSE Board || Open EVSE || $80 || 1 || http://code.google.com/p/open-evse/ ||
-|| 75A Contactor || Newark || $180.76 || 1 || hhttp://www.newark.com/square-d/8910dpa72v09/definite-purpose-contactor/dp/50F4325 ||
-|| Current Transformer || Digikey || $10.65 || 1 || http://search.digikey.com/us/en/products/CR8420-1000-G/582-1018-ND/1045174 ||
-|| 12V DC Power Supply || Digikey || $28.00 || 1 || http://search.digikey.com/us/en/products/FSC-S5-12U/102-1573-ND/1699037 ||
+|| 75A Contactor || Newark || $180 || 1 || hhttp://www.newark.com/square-d/8910dpa72v09/definite-purpose-contactor/dp/50F4325 ||
+|| Relay (12V coil) || Digikey || $2 || 1 || http://search.digikey.com/us/en/products/G5LA-1A4%20DC12/Z2571-ND/1210589 ||
+|| Current Transformer || Digikey || $10 || 1 || http://search.digikey.com/us/en/products/CR8420-1000-G/582-1018-ND/1045174 ||
+|| 12V DC Power Supply || Digikey || $28 || 1 || http://search.digikey.com/us/en/products/FSC-S5-12U/102-1573-ND/1699037 ||
 || 75A J1772 cord || see Wiki || $330 || 1 || http://code.google.com/p/open-evse/wiki/J1772CableSources ||
 
-
-<a href="http://www.flickr.com/photos/60192309@N05/6140390535/" title="2011-09-09_14-32-39_457 by chris1howell, on Flickr"><img src="http://farm7.static.flickr.com/6178/6140390535_062077ff12.jpg" width="500" height="281"</a>
-
-<a href="http://www.flickr.com/photos/60192309@N05/6140943244/" title="2011-09-09_14-29-53_33 by chris1howell, on Flickr"><img src="http://farm7.static.flickr.com/6186/6140943244_3ed9cb9443.jpg" width="500" height="281"</a>
