Edited wiki page Stepbystepinstructiontouploadcode through web user interface.

--- a/wiki/Stepbystepinstructiontouploadcode.wiki
+++ b/wiki/Stepbystepinstructiontouploadcode.wiki
@@ -23,11 +23,11 @@ http://arduino.cc/en/Main/Software
 I downloaded the latest version 1.0.
 
 After download and unpacking I needed to change few things:
-  #1 Find and download the Time library.
+  *  #1 Find and download the Time library
 I downloaded it from here:
 http://www.arduino.cc/playground/uploads/Code/Time.zip and unpack it in the libraries arduino IDE folder - for me (on Windows 7) that was <install dir>\arduino-1.0-windows\arduino-1.0\libraries. The library zip file contained 3 folders - so I got Time, DateTime and a 3rd library.
 
-  #2 Add definition for the evse board*
+  *  #2 Add definition for the evse board
 add to <install dir>\arduino-1.0-windows\arduino-1.0\hardware\arduino\boards.txt the following lines:
 {{{
 ##############################################################
@@ -43,16 +43,20 @@ usbtiny328.build.core=arduino
 usbtiny328.build.variant=standard
 }}}
 
-  #3 Download and install the usbtinyisp driver
+  *  #3 Download and install the usbtinyisp driver
 I downloaded it from here http://www.sparkfun.com/datasheets/Programmers/pocketprog-driver.zip
 
-== Done ==
+== Ready ==
 You are now ready. 
-#1 Start up the Arduino IDE (in <install dir>\arduino-1.0-windows\arduino-1.0\arduino.exe)
-#2 Open and load the source code for the firmware
-#3 Select the target board from Tools->Board->[usbtinyisp]OPEN EVSE 
-#4 Select programmer from Tools->Programmer->USBTinyISP
-#5 Import Time library from Sketch->Import Library->Time (not sure if this is absolutely needed)
-#6 Connect the usbtinyisp board to your computer with the usb cable, and to the open evse board with the header cable. 
-#7 Test your code with Sketch->Verify/Compile (or Ctrl+R)
-#8 Upload the sketch to the open evse board using File->Upload.
+  #1 Start up the Arduino IDE (in <install dir>\arduino-1.0-windows\arduino-1.0\arduino.exe)
+  #2 Open and load the source code for the firmware
+  #3 Select the target board from Tools->Board->[usbtinyisp]OPEN EVSE 
+  #4 Select programmer from Tools->Programmer->USBTinyISP
+  #5 Import Time library from Sketch->Import Library->Time (not sure if this is absolutely needed)
+  #6 Connect the usbtinyisp board to your computer with the usb cable, and to the open evse board with the header cable. 
+  #7 Test your code with Sketch->Verify/Compile (or Ctrl+R)
+  #8 Upload the sketch to the open evse board using File->Upload.
+
+
+== Done ==
+You should now have your open evse with a new functionality.
