--- a/wiki/MaxCurrent.wiki
+++ b/wiki/MaxCurrent.wiki
@@ -21,18 +21,27 @@ There are many ways to change the maximum current offered to the Electric Vehicl
 The CURRENT_CAPACITY sets the default current, setting can be modified when the firmware is loaded or by changing the variable with the FTDI serial port. FTDI to USB or FTDI to Bluetooth adapters are avaliable from Sparkfun.
 
 =CLI=
- Open EVSE Hardware - Atmel ATMEGA328P-AU Software - Open EVSE v0.4.0
+The Command line interface uses a standard terminal such as the one included in the Arduino IDE. The baud rate is 38400.
+
+`typed commands in *Bold*`
+
+Open EVSE 
+Hardware - Atmel ATMEGA328P-AU 
+Software - Open EVSE v0.4.0
 
 Open_EVSE>*set amp*
 
-WARNING - DO NOT SET CURRENT HIGHER THAN 80% OF YOUR CIRCUIT BREAKER OR GREATER THAN THE RATED VALUE OF THE EVSE
+WARNING - DO NOT SET CURRENT HIGHER THAN 80% 
+OF YOUR CIRCUIT BREAKER OR GREATER 
+THAN THE RATED VALUE OF THE EVSE
 
 Enter amps (6-80) : *16*
 
 Current Capacity now: 16
 
+
 Open_EVSE>*save*
- Saving Settings 
+Saving Settings 
 
 
 =Hardware=
