--- a/wiki/MaxCurrent.wiki
+++ b/wiki/MaxCurrent.wiki
@@ -24,7 +24,8 @@ The CURRENT_CAPACITY sets the default current, setting can be modified when the 
 The Command line interface uses a standard terminal such as the one included in the Arduino IDE. The baud rate is 38400.
 
 `typed commands in *Bold*`
-
+CLI Example
+{{{
 Open EVSE 
 Hardware - Atmel ATMEGA328P-AU 
 Software - Open EVSE v0.4.0
@@ -42,7 +43,7 @@ Current Capacity now: 16
 
 Open_EVSE>*save*
 Saving Settings 
-
+}}}
 
 =Hardware=
 
