--- a/wiki/EVSE_TESTING.wiki
+++ b/wiki/EVSE_TESTING.wiki
@@ -4,7 +4,9 @@
 
 =Recommended Tools=
 EV simulator (diode and resistors)
+
 Multimeter w/Frequency
+
 Occiloscope
 
 =EV Simulator=
@@ -14,7 +16,7 @@ An EV simulator can be as simple as a diode in series with the correct resistor.
 <a href="http://www.flickr.com/photos/60192309@N05/6790149512/" title="Untitled by chris1howell, on Flickr"><img src="http://farm8.staticflickr.com/7060/6790149512_fd64eb3201.jpg" width="500" height="350"</a>
 
 ==Board==
-<a href="http://www.flickr.com/photos/60192309@N05/6936255065/" title="Untitled by chris1howell, on Flickr"><img src="http://farm8.staticflickr.com/7060/6936255065_b6754ae80f_m.jpg" width="240" height="205"</a>
+<a href="http://www.flickr.com/photos/60192309@N05/6936255065/" title="Untitled by chris1howell, on Flickr"><img src="http://farm8.staticflickr.com/7060/6936255065_b6754ae80f_z.jpg" width="549" height="470"</a>
 
 = Pilot =
 The J1772 Pilot is a 1khz +12V to -12V square wave, the voltage defines the state and the duty cycle defines the current available to the EV. The EVSE sets the duty cycle and the EV adds resistance from the pilot the Ground to vary the voltage. The EVSE reads the voltage and changes state accordingly. 
@@ -50,3 +52,39 @@ To test State F, the EVSE should be disconnected from power. The EVSE should tur
 ==State F==
 To test State F, with the EVSE powered connect the EV Simulator (just a resistor) with a resistance of 2.74k Ohms. The EVSE should go to the Error Diode Check Failed. For Open EVSE, the LED should light Red.
 <a href="http://www.flickr.com/photos/60192309@N05/6936308687/" title="2012-02-26_21-54-35_715 by chris1howell, on Flickr"><img src="http://farm8.staticflickr.com/7066/6936308687_2888cf31c3.jpg" width="500" height="281"</a>
+
+==Frequency==
+The Pilot should have a frequancy of 1kHz(1000Hz). The acceptible J1772 tolerance is from 980-1020Hz. Test Frequency by attaching the EV simulator in State C "Charging Mode) (or diode and 882 Ohm resistor). Attach a multimeter or occiloscope from pilot to EVSE Ground.  
+<a href="http://www.flickr.com/photos/60192309@N05/6936301695/" title="2012-02-26_21-53-24_202 by chris1howell, on Flickr"><img src="http://farm8.staticflickr.com/7191/6936301695_b7da995c81.jpg" width="500" height="281"</a>
+
+==Pilot Duty Cycle==
+The Pilot Duty Cycle is dependant on the Max current setting of the EVSE. Test Duty Cycle by attaching the EV simulator in State C "Charging Mode) (or diode and 882 Ohm resistor). Attach an occiloscope from pilot to EVSE Ground. Duty cycle should match the chart below.
+
+Up to 51A
+Amps = Duty cycle x 0.6
+Duty cycle = Amps / 0.6
+
+51 - 80A
+Amps = (Duty Cycle - 64) * 2.5 
+
+|| Duty Cycle || Max Current ||
+|| < 3% || Error ||
+|| 3% - 7% || Digitial Com Required ||
+|| 10% || 6A ||
+|| 20% || 12A ||
+|| 30% || 18A ||
+|| 40% || 24A ||
+|| 50% || 30A ||
+|| 60% || 36A ||
+|| 70% || 42A ||
+|| 80% || 48A ||
+|| 86% || 55A ||
+|| 88% || 60A ||
+|| 90% || 65A ||
+|| 92% || 70A ||
+|| 94% || 75A ||
+|| 96% || 80A ||
+|| >96 || Error ||
+
+The EVSE in the picture has a 30A max current setting or a 50% duty cycle. (50% on - 50% off)
+<a href="http://www.flickr.com/photos/60192309@N05/6936311363/" title="2012-02-26_21-57-20_482 by chris1howell, on Flickr"><img src="http://farm8.staticflickr.com/7052/6936311363_08c48f4a52.jpg" width="500" height="281"</a>
