--- a/wiki/EVSE_TESTING.wiki
+++ b/wiki/EVSE_TESTING.wiki
@@ -1,7 +1,7 @@
 #TESTING EVSE.
 
 =Open EVSE=
-All the tests below are performed on each Open EVSE board before shipping. Testing should also be performed after building and EVSE before placing the EVSE into service. 
+All the tests below are performed on each Open EVSE board before shipping. Testing should also be performed after building an EVSE before placing it into service. 
 
 =Recommended Tools=
 EV simulator (diode and resistors)
